Bug 71830 - svg failures after r99561
Summary: svg failures after r99561
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nikolas Zimmermann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-08 10:14 PST by Ojan Vafai
Modified: 2011-11-09 01:34 PST (History)
3 users (show)

See Also:


Attachments
Patch (2.78 KB, patch)
2011-11-09 01:14 PST, Nikolas Zimmermann
koivisto: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ojan Vafai 2011-11-08 10:14:35 PST
The following two tests started failing on the chromium bots after http://trac.webkit.org/changeset/99561:
svg/zoom/page/zoom-svg-as-relative-image.html
svg/zoom/page/relative-sized-document-scrollbars.svg

They look like real regressions. I expect they're failing for the other ports as well if run with pixel tests.
Comment 1 Ojan Vafai 2011-11-08 10:16:15 PST
It looks like svg/zoom/page/zoom-svg-as-relative-image.html is also failing the text diff on the chromium bots:

@@ -1,6 +1,6 @@
 layer at (0,0) size 800x600
   RenderView at (0,0) size 800x600
 layer at (0,0) size 800x600
-  RenderSVGRoot {svg} at (6,3) size 788x594
-    RenderSVGPath {rect} at (6,3) size 788x594 [stroke={[type=SOLID] [color=#000000]}] [x=4.63] [y=3.47] [width=453.70] [height=340.28]
+  RenderSVGRoot {svg} at (12,8) size 788x592
+    RenderSVGPath {rect} at (12,8) size 788x592 [stroke={[type=SOLID] [color=#000000]}] [x=8.00] [y=6.00] [width=784.00] [height=588.00]
     RenderSVGHiddenContainer {defs} at (0,0) size 0x0
Comment 2 Nikolas Zimmermann 2011-11-08 10:30:55 PST
(In reply to comment #1)
> It looks like svg/zoom/page/zoom-svg-as-relative-image.html is also failing the text diff on the chromium bots:
> 
> @@ -1,6 +1,6 @@
>  layer at (0,0) size 800x600
>    RenderView at (0,0) size 800x600
>  layer at (0,0) size 800x600
> -  RenderSVGRoot {svg} at (6,3) size 788x594
> -    RenderSVGPath {rect} at (6,3) size 788x594 [stroke={[type=SOLID] [color=#000000]}] [x=4.63] [y=3.47] [width=453.70] [height=340.28]
> +  RenderSVGRoot {svg} at (12,8) size 788x592
> +    RenderSVGPath {rect} at (12,8) size 788x592 [stroke={[type=SOLID] [color=#000000]}] [x=8.00] [y=6.00] [width=784.00] [height=588.00]
>      RenderSVGHiddenContainer {defs} at (0,0) size 0x0


Yeah, Qt also sees it. I'm going to try a full chromium build to debug this on my own...
Comment 3 Nikolas Zimmermann 2011-11-09 01:14:10 PST
Created attachment 114222 [details]
Patch

It was a merging regression, thanks for noticing!
Comment 4 Nikolas Zimmermann 2011-11-09 01:16:22 PST
Landed in r99669.  Qt should be green again, if there are any rebaselines needed, I'll take care of them.
Comment 5 Nikolas Zimmermann 2011-11-09 01:33:31 PST
(In reply to comment #4)
> Landed in r99669.  Qt should be green again, if there are any rebaselines needed, I'll take care of them.

Hm I just noticed that Ossy updated relative-sized-document-scrollbars.svg baseline in r99654, which was wrong. That needs to be undone.
Comment 6 Nikolas Zimmermann 2011-11-09 01:34:29 PST
Oh, and Philipp updated gtk in r99655. These results are wrong, and will need another update now (revert to what it was before).