third_party/WebKit/Source/WebCore/svg/SVGLengthContext.cpp
@@ -283,6 +283,7 @@ bool SVGLengthContext::determineViewport(float& width, float& height) const
             if (!frame)
                 return false;
 
+            // SVGs embedded through <object> resolve percentage values against the owner renderer in the host document.
             if (RenderPart* ownerRenderer = frame->ownerRenderer()) {
                 width = ownerRenderer->width();
                 height = ownerRenderer->height();
@@ -294,8 +295,14 @@ bool SVGLengthContext::determineViewport(float& width, float& height) const
         if (!view)
             return false;
 
+        // Always resolve percentages against the unscaled viewport, as agreed across browsers.
+        float zoom = view->style()->effectiveZoom();
         width = view->viewWidth();
         height = view->viewHeight();
+        if (zoom != 1) {
+            width /= zoom;
+            height /= zoom;
+        }
         return true;
     }
 
@@ -303,12 +310,13 @@ bool SVGLengthContext::determineViewport(float& width, float& height) const
     SVGElement* viewportElement = m_context->viewportElement();
     if (viewportElement && viewportElement->isSVG()) {
         const SVGSVGElement* svg = static_cast<const SVGSVGElement*>(viewportElement);
-        if (svg->hasAttribute(SVGNames::viewBoxAttr)) {
-            width = svg->viewBox().width();
-            height = svg->viewBox().height();
-        } else {
+        FloatRect viewBox = svg->currentViewBoxRect();
+        if (viewBox.isEmpty()) {
             width = svg->width().value(svg);
             height = svg->height().value(svg);
+        } else {
+            width = viewBox.width();
+            height = viewBox.height();
         }
 
         return true;
